--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <span class="head"><a href="#product">Products</a></span>
       <span class="head"><a href="#contact">Contact</a></span>
     </ul>
-  </nav>
+      </nav>
+      </div>
+    </header>
 
-    </div>
-  </header>
     <div class="banner">
       <div class="container">
         <div class="newarrival">
@@ -73,6 +73,6 @@
       <div class="container">
         <h5>Copyright Secret Agent Supply Inc.</h5>
       </div>
-    </div>
+    </div> */
   </body>
 </html>
