--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <title>Tortoise Shell Optics</title>
   </head>
   <body>
+
+    <!-- Main banner Container-->
     <header>
       <div class="container">
       <img class="logo" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-white.png" alt="Secret Agent Supply Inc">
       <span>TORTOISE SHELL OPTICS.</span>
 
-      <nav>
+      <!-- Banner Menu -->
+    <nav>
     <ul>
       <span class="head"><a href="#services">Services</a></span>
       <span class="head"><a href="#product">Products</a></span>
       <span class="head"><a href="#contact">Contact</a></span>
     </ul>
-      </nav>
-      </div>
+    </nav>
+    </div>
     </header>
+
 
     <div class="banner">
       <div class="container">
