add css to banner

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link rel="stylesheet" href="resources/css/reset.css">
+    <link rel="stylesheet" href="resources/style.css">
+    <link rel="stylesheet" href="resources/reset.css">
     <title>Tortoise Shell Optics</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
     </div>
     </header>
 
-
+<!--in construction
     <div class="banner">
       <div class="container">
         <div class="newarrival">
@@ -77,6 +77,6 @@
       <div class="container">
         <h5>Copyright Secret Agent Supply Inc.</h5>
       </div>
-    </div> */
+    </div> -->
   </body>
 </html>
